Removed height from the bottom nav, so that the wrapping would work correctly

--- a/main.css
+++ b/main.css
@@ -154,7 +154,7 @@ a:hover {
     text-decoration: none;
     justify-content: space-between;
     font-size: 14px;
-    height: 40px;
+    /*height: 40px;*/
 }
 
 @media (max-width:878px) {
@@ -192,7 +192,7 @@ a:hover {
     align-self: center;
     text-align: center;
     width:400px;
-    flex-wrap: nowrap;
+    /*flex-wrap: nowrap;*/
 }
 
 #bottom-nav-text {
